src/style.css
@import "~flag-icon-css/css/flag-icon.css";

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-size: 1em;
    overflow-x: hidden;
}

@font-face {
    font-family: "soviet-league";
    src: url("fonts/sovietleague-webfont.woff2") format("woff2"),
        url("fonts/sovietleague-webfont.woff") format("woff");
    font-weight: normal;
    font-style: normal;
}

#root {
    --main-dark-color: #094067;
    --main-theme: #094067;
    --light-theme: #fffffe;
    --highlight: #eee;
    display: grid;
    grid-template-columns: 1fr 2fr;
    width: 100vw;
    height: 100vh;
    color: var(--main-dark-color);
    font-family: "Monaco", sans-serif;
}

button {
    cursor: pointer;
    border-style: none;
}

aside {
    background-color: var(--light-theme);
    display: grid;
    grid-template-rows: 1fr 0.5fr 1.5fr;
    justify-items: center;
    justify-self: center;
    padding-bottom: 30px;
    min-width: 250px;
}

main {
    background-color: var(--main-theme);
    /* pattern from https://www.heropatterns.com/ */
    background-image: url('./images/circuit-board.svg');
    padding-bottom: 30px;
}

#userpic {
    align-self: center;
}

#userpic img {
    height: 200px;
    width: auto;
}

#full-name {
    font-family: "soviet-league", sans-serif;
    font-size: 3em;
    letter-spacing: 0.05em;
    align-self: start;
}

#social-networks {
    display: grid;
    grid-template-rows: repeat(4, 1fr);
    grid-gap: 10px;
    height: 300px;
}

.social-btn {
    background-color: var(--main-theme);
    color: var(--light-theme);
    position: relative;
    padding: 10px;
    height: 60px;
    width: 60px;
    border-radius: 50%;
    transition: 0.2s ease-in-out;
}

.social-link {
    color: inherit;
}

.social-btn:hover {
    background-color: var(--light-theme);
    color: var(--main-theme);
    border: 2px solid var(--main-theme);
}

.social-btn:active {
    transform: scale(0.9);
}

.tooltip {
    display: none;
    position: absolute;
    background-color: var(--main-dark-color);
    min-width: 100px;
    top: 50%;
    left: 100%;
    margin-left: 20px;
    padding: 10px;
    color: var(--light-theme);
    letter-spacing: 0.05em;
    font-family: "Monaco", sans-serif;
    border-radius: 10px;
    z-index: 100;
    transform: translate(0, -50%);
}

.social-btn:hover .tooltip {
    display: block;
}

.main-section {
    padding-top: 50px;
    display: grid;
    grid-template-rows: 45px 5px min-content;
    margin: 0 50px;
}

.main-section-heading {
    background-color: var(--light-theme);
    border-radius: 4px;
    font-size: 2em;
    letter-spacing: 0.1em;
    font-family: "soviet-league", sans-serif;
    max-width: 150px;
    padding: 10px 15px;
    grid-row: 1 / span 2;
    grid-column: 1;
    z-index: 1;
}

.main-section-content {
    background-color: var(--light-theme);
    min-height: 100px;
    border-radius: 4px;
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
    padding: 10px;
    grid-row: 2 / span 3;
    grid-column: 1;
}

.main-section:last-child {
    margin-bottom: 30px;
}

#introduction {
    margin: 10px 0;
}

.icons-container {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-column-gap: 2px;
    align-content: center;
    justify-items: center;
    padding: 5px;
    border-radius: 4px;
    background-color: var(--highlight);
}

.language-icon {
    font-size: 2.1em;
}

.flag-icon {
    font-size: 1.9em;
    border-radius: 7px;
}

#projects {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-template-rows: 1fr 1fr;
    row-gap: 5px;
    column-gap: 10px;
}

.project-card {
    display: grid;
    margin-top: 10px;
    grid-template-columns: 1fr 2fr;
    column-gap: 15px;
    min-height: 100px;
    background-color: var(--highlight);
    border-radius: 10px;
    padding: 10px;
}

.project-card.main {
    grid-column: 1 / -1;
}

.project-logo {
    background: var(--light-theme);
    border-radius: 15px;
    height: 80px;
    min-width: 80px;
    padding: 10px;
    align-self: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

.project-logo img {
    height: 70px;
}

.project-name {
    letter-spacing: 0.05em;
    font-size: 20px;
}

.project-name a {
    color: var(--main-dark-color);
    text-decoration: none;
    padding: 10px 20px;
    position: relative;
    overflow: hidden;
    display: inline-block;
    transition: 0.3s ease-out;
}

.project-name a::before,
.project-name a::after,
.project-name a span::before,
.project-name a span::after {
    width: 5px;
    height: 5px;
    background: transparent;
    content: "";
    position: absolute;
    transition: 0.3s;
    opacity: 1;
}

.project-name a span::before {
    left: 5px;
    top: 5px;
    border-top: 2px solid var(--main-dark-color);
    border-left: 2px solid var(--main-dark-color);
}

.project-name a span::after {
    right: 5px;
    bottom: 5px;
    border-right: 2px solid var(--main-dark-color);
    border-bottom: 2px solid var(--main-dark-color);
}

.project-name a::before {
    right: 5px;
    top: 5px;
    border-right: 2px solid var(--main-dark-color);
    border-top: 2px solid var(--main-dark-color);
}

.project-name a::after {
    left: 5px;
    bottom: 5px;
    border-left: 2px solid var(--main-dark-color);
    border-bottom: 2px solid var(--main-dark-color);
}

.project-name a:hover::before,
.project-name a:hover::after,
.project-name a:hover span::before,
.project-name a:hover span::after {
    opacity: 0;
}

.project-name a:hover {
    background: var(--light-theme);
    border-radius: 10px;
}

@media screen and (max-width: 900px) {
    .project-card.main {
        grid-column: auto;
    }
    .project-logo img {
        height: 70px;
        max-width: 70px;
    }
}

@media screen and (max-width: 750px) {
    #root {
        grid-template-columns: 1fr;
    }
    aside {
        padding-bottom: initial;
        padding-top: 30px;
        grid-template-rows: 1fr 0.5fr 0.5fr;
    }
    #social-networks {
        grid-template-rows: auto;
        grid-template-columns: repeat(4, 1fr);
        height: auto;
    }
    #full-name {
        align-self: center;
    }
    .social-btn:hover .tooltip {
        display: none;
    }
    #projects {
        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    }
    .project-card {
        padding: 10px 0px;
        grid-template-columns: initial;
        justify-items: center;
    }
    .project-logo {
        max-width: 50px;
    }
    .project-content {
        display: flex;
        flex-direction: column;
    }
    .project-name {
        margin: auto;
    }
    .project-description {
        max-width: 250px;
        text-align: center;
    }
}

